--- a/views/default/wiper.css
+++ b/views/default/wiper.css
@@ -13,15 +13,17 @@
 }
 
 .wiper-list-item > .wiper-view {
-    flex: 1 1 auto;
+    flex: 1 0 auto;
 	display: flex;
 	align-items: center;
 }
 
 .wiper-list-item > .wiper-view > * {
-	flex: 0 0 auto;
+	flex: 1 0 auto;
 }
-
+.wiper-list-item > .wiper-view > button {
+	flex-grow: 0;
+}
 .wiper-buttonbank button {
 	margin-right: 5px;
 }
